fix error text wrap

--- a/www/css/hero-calculator.common.css
+++ b/www/css/hero-calculator.common.css
@@ -26,7 +26,6 @@
     font-size: 90%;
     color: #c7254e;
     background-color: #f9f2f4;
-    white-space: nowrap;
     border-radius: 4px;
     margin-bottom: 0;
 }
